--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-popover": "^1.1.15",
     "date-fns": "^4.1.0",
     "next": "16.1.1",
     "prisma": "^5.22.0",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
