--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-popover": "^1.1.15",
+    "@vercel/blob": "^2.0.0",
     "date-fns": "^4.1.0",
     "next": "16.1.1",
     "prisma": "^5.22.0",
